hphp/hack/test/typecheck/assignment_sequencing/double_assign.php.exp
File "double_assign.php", line 6, characters 8-8:
Assignments can no longer be used as expressions. Pull the assignment out into a separate statement. (Parsing[1002])
File "double_assign.php", line 6, characters 3-4:
Unsequenced modifications to local variable. Modified here (Typing[4144])
File "double_assign.php", line 6, characters 8-9:
And also modified here
