hphp/hack/test/typecheck/assignment_sequencing/double_assign.php
<?hh // strict

function test(int $y): int {
  // This could probably wouldn't be problematic to allow but it is
  // dumb, so.
  $x = $x = $y;
  return $x;
}
